--- a/example.conf
+++ b/example.conf
@@ -1,9 +1,22 @@
 # Enhanced DUC configuration data
 
+# Your username and password:
 username    = "ChangeMe";
 password    = "ChangeMe";
+
+# The hostname to be updated. Multiple hosts are separated with a vertical bar.
 hostname    = "host.domain.com";
+
+# Associate the hostname(s) with this IP address. If the special value WAN_address
+# is specified: the WAN address from which the update request is sent from is used.
 ip_addr     = "WAN_address";
+
+# Service provider hostname. The http GET request is sent to this hostname.
 sp_hostname = "dynupdate.no-ip.com";
+
+# Connect to sp_hostname + this port. 443 = enable SSL.
 port        = "80";
-update_interval_seconds = "1800";
+
+# Update interval specified in seconds. If a value less than 600 is entered, the
+# underlying code will fallback to 1800 to avoid flooding the server with requests.
+update_interval_seconds = "3600";
