Added new settings

--- a/example.conf
+++ b/example.conf
@@ -20,3 +20,14 @@ port        = "80";
 # Update interval specified in seconds. If a value less than 600 is entered, the
 # underlying code will fallback to 1800 to avoid flooding the server with requests.
 update_interval_seconds = "3600";
+
+# Server used to determine your external IP.
+primary_ip_lookup_srv = "ip1.dynupdate.no-ip.com";
+
+# Backup server for IP lookups.
+backup_ip_lookup_srv = "ip2.dynupdate.no-ip.com";
+
+# Even if your external IP address hasn't changed between update intervals, or if
+# the program cannot determine your external IP  --  in either way: force update.
+# This setting should be set to YES if ip_addr is not equal to value WAN_address.
+force_update = "YES";
