--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -20,5 +20,7 @@ jobs:
       uses: actions/checkout@v3
 
     - run: |
+        brew update
         brew install libressl
+        brew install openssl
         make CC=clang CXX=clang++
